# made_with_smile

./: README.md
breakout/: README.md  main.c
breakout/include/: Dependencies.h  Settings.h
breakout/include/dicts/: TextureDict.h
breakout/src/: Settings.c
breakout/src/dicts/: TextureDict.c
fifty-bird/: .gitignore  CMakeLists.txt  README.md  main.c
fifty-bird/include/: Bird.h  Pipe.h  PipeManager.h  PipePair.h  Settings.h
fifty-bird/include/scenes/: Countdown.h  Pause.h  Play.h  Score.h  Title.h
fifty-bird/src/: Bird.c  Pipe.c  PipeManager.c  PipePair.c  Settings.c
fifty-bird/src/scenes/: Countdown.c  Pause.c  Play.c  Score.c  Title.c
fifty_bird-main/: README.md
fifty_bird-main/include/: Pipe.h
fifty_bird-main/include/states/: StateCountdown.h  StateScore.h
fifty_bird-main/src/: Pipe.c  PipePair.c  Settings.c  _main.c
fifty_bird-main/src/states/: StateScore.c  StateTitle.c
flappy_bird/: CMakeLists.txt  README.md
flappy_bird/include/: Assets_paths.h  Bird.h  PipePair.h  PipePairManager.h  Settings.h
flappy_bird/include/states/: StateCountdown.h  StatePlay.h  StateScore.h  StateTitle.h
flappy_bird/src/: Assets_paths.c  Bird.c  PipePairManager.c  _main.c
flappy_bird/src/states/: StateCountdown.c  StatePlay.c  StateScore.c  StateTitle.c
pong/: README.md  main.c
pong-main/: README.md
pong/include/scenes/: Play.h  Start.h
pong/src/scenes/: Start.c
